# std-fpm

./: CMakeLists.txt  Cargo.toml  README.md  buf.c  buf.h  config.c  debug.h  debug_utils.c  debug_utils.h  fcgi_params_parser.c  fcgi_parser.c  fcgi_parser.h  fcgi_process.c  fcgi_process.h  fcgi_writer.c  fcgitypes.c  fcgitypes.h  fd_ctx.c  fd_ctx.h  fdutils.c  fdutils.h  log.c  log.h  main.c  main.h  process_pool.c  process_pool.h
.github/workflows/: build.yml
conf/: std-fpm.conf
debian/: changelog  control  rules  std-fpm.postinst  std-fpm.postrm
examples/c/: env.c  test.c
examples/c++/: hello.cpp  put.cpp
examples/luajit/: fcgi.lua  put_file.fcgi  test_luajit.fcgi  test_put.fcgi
examples/perl/: env.fcgi  put_file.fcgi  test.fcgi
redhat/: std-fpm.spec
src/: buf.c  buf.h  config.c  config.h  config.rs  conn.c  conn.h  connect_process.c  connect_process.h  debug_utils.c  debug_utils.h  events.c  events.h  fcgi_params_parser.c  fcgi_params_parser.h  fcgi_params_parser.rs  fcgi_parser.c  fcgi_parser.h  fcgi_pool.rs  fcgi_process.c  fcgi_process.h  fcgi_reader.rs  fcgi_spawn.rs  fcgi_writer.c  fcgi_writer.h  fcgi_writer.rs  fcgitypes.h  fd_ctx.c  fd_ctx.h  fdlimit.rs  log.c  log.h  main.c  main.rs  process_pool.c  process_pool.h  units.c  units.h  worker.c  worker.h
systemd/system/: std-fpm.service
tests/: CMakeLists.txt  asserts.c  asserts.h  functional.rs  main.c  test_fcgi_params_parser.c  test_fcgi_params_parser.h  test_fcgi_parser.c  test_fcgi_parser.h  test_parse_script_filename.c  test_parse_script_filename.h
tests/support/: fcgi_proto.rs  test_backend.rs
