[package]
name = "hello-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "net", "process", "io-util", "macros", "time"] }
bytes = "1.6.0"
configparser = "3.1.0"
log2 = "0.1.11"
